--- a/invoice.html
+++ b/invoice.html
@@ -63,11 +63,11 @@
     </table>
     <div id="notices">
         <div>NOTICE:</div>
-        <div class="notice">A finance charge of 1.5% will be made on unpaid balances after 30 days.</div>
+        <div class="notice">Please Confirm to us after you made your payment</div>
     </div>
 </main>
 <footer>
-    Invoice was created on a computer and is valid without the signature and seal.
+    Invoice was created on a computer and is valid without the signature and seal. &copy Hellonemo Digital Agency 2013-2016
 </footer>
 </body>
 </html>
