--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
 								<div class="gallery">
 									<div class="group span-3">
 										<a href="images/gallery/fulls/Fluffy_Ascension_2018_Hopesa_005.jpg" class="image filtered span-3" data-position="bottom"><img src="images/gallery/fulls/Fluffy_Ascension_2018_Hopesa_005.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/ych16.png" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/ych16c.png" alt="" /></a>
+										<a href="images/gallery/fulls/ych16.png" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/ych16C.png" alt="" /></a>
 										<a href="images/gallery/fulls/ych17.png" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/ych17C.png" alt="" /></a>
 									</div>
-									<a href="images/gallery/fulls/IMG_4294.jpg" class="image filtered span-2-5" data-position="top"><img src="images/gallery/fulls/IMG_4294.jpg" alt="" /></a>
+									<a href="images/gallery/fulls/IMG_4294.JPG" class="image filtered span-2-5" data-position="top"><img src="images/gallery/fulls/IMG_4294.JPG" alt="" /></a>
 									<div class="group span-4-5">
 										<a href="images/gallery/fulls/Dea_groupcommission_v2_SML.png" class="image filtered span-3" data-position="top"><img src="images/gallery/fulls/Dea_groupcommission_v2_SML.png" alt="" /></a>
 										<a href="images/gallery/fulls/D2AvxgJT.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/fulls/D2AvxgJT.jpg" alt="" /></a>
