--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
 								</div>
 									<div class="span-1-5">
 										<ul class="contact-icons color1">
-											<li class="icon fa-twitter"><a href="twitter.com/hopesacamaraski">@hopesacamaraski</a></li>
-											<li class="icon fa-telegram"><a href="t.me/hopesa">t.me/hopesa</a></li>
-											<li class="icon fa-instagram"><a href="#">@freydagdeerdog</a></li>
+											<li class="icon fa-twitter"><a href="https://www.twitter.com/hopesacamaraski">@hopesacamaraski</a></li>
+											<li class="icon fa-telegram"><a href="https://www.t.me/hopesa">t.me/hopesa</a></li>
+											<li class="icon fa-instagram"><a href="https://www.instagram.com/freydagdeerdog/">@freydagdeerdog</a></li>
 										</ul>
 									</div>
 								</div>
